objects/sfal__AdvisingPool__c.object
<CustomObject>
    <description>A grouping of advisors, typically representing an advising function that offers services to the general student population.</description>
    <fields>
        <fullName>About__c</fullName>
        <description>Custom Description to be displayed in the student portal.</description>
        <label>About</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>sfal__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account that the Advising Pool is related to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Advising Pools</relationshipLabel>
        <relationshipName>AdvisingPools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfal__CaseTeamName__c</fullName>
        <description>The name of the predefined case team that the Advising Pool corresponds to.</description>
        <externalId>true</externalId>
        <inlineHelpText>This value must exactly match the value of the predefined case team&apos;s Team Name field. Any mismatch can prevent scheduling with team members.</inlineHelpText>
        <label>Case Team Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sfal__Description__c</fullName>
        <description>Description of the Advising Pool.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Advising Pool</label>
    <listViews>
        <fullName>sfal__All</fullName>
        <columns>NAME</columns>
        <columns>sfal__CaseTeamName__c</columns>
        <columns>About__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advising Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>